<resources>
    <string name="app_name">Movies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular">popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="detail">Detail</string>
    <string name="overview">overview</string>
    <string name="search">Search</string>
    <string name="what_do_you_want">What do you want to watch?</string>
    <string name="we_are_sorry">we are sorry, we can not find the movie :(</string>
    <string name="find_your_movie">"Find your movie by Type title, categories, years, etc "</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
</resources>